--- a/index.html
+++ b/index.html
@@ -323,8 +323,66 @@ como español o ingles -->
     esto es una ventana modal en HTML
    </dialog>
    <hr>
-   <h2 id="elementosMultimedia"></h2>
-  <hr>
+   <h2 id="elementosMultimedia">Elementos Multimedia</h2>
+   <audio src="" controls preload="auto"></audio> <br>
+   <!-- otros  atributios como autoplay, loop, mute, preload-->
+    <video src="media/mylivewallpapers-com-Lofi-Night-Rain-4K.mp4"controls preload="auto" poster="img/Cat03.jpg"></video>
+    <a href="index.html#inicio">🔼</a>
+    <hr>
+    <h2 id="iframes">iframes</h2>
+    <iframe src="hola.html" frameborder="1"></iframe><br>
+    <iframe src="media/cheatsheet-a5.pdf" frameborder="0"></iframe><br>
+    <a href="index.html#inicio">🔼</a>
+    <hr>
+    <h2 id="formularios">Elementos de formularios</h2>
+    <input type="text"> <br>
+    <input type="checkbox" <br>
+    <input type="radio"><br>
+    <input type="color"><br>
+    <input type="date"><br>
+    <input type="button" value="button"><br>
+    <input type="submit"><br>
+    <input type="reset"> <br>
+    <input type="file" ><br>
+    <input type="file" multiple><br>
+    <input type="hidden" name ="idioma" value="es"><br>
+    <input type="email"><br>
+    <input type="number"><br>
+    <input type="tel"><br>
+    <input type="password"><br>
+    <input type="search"><br>
+    <textarea cols="50" rows="5"></textarea><br>
+    <select multiple>
+      <option value="">HTML</option>
+      <option value="">CSS</option>
+      <option value="">JS</option>
+      <option value="">PHP</option>
+      <option value="">PYTHON</option>
+    </select>
+    <br>
+    <a href="index.html#inicio">🔼</a>
+    <hr>
+    <h2 id="atributosdeformularios">Atributos de inpts y formularios</h2>
+    <input type="text" readonly value="Daniel Torres" disabled >
+    <input type="text" placeholder="Escribe tu nombre">
+    <h3>Ejemplo de formulario</h3>
+    <h4>formulario de login</h4>
+    <form action="https://jonhmircha.com/" method="post" autocomplete="on">
+      <label for="usuario">usuario :</label>
+      <!-- el for vincula la etiqueta label con la id asignada al input -->
+      <!-- en el action deberia de ponerse el lugar hacia donde va a ser enviada la informacion del formulario -->
+      <!-- hay 2 metos para enviar formularios 1 get el determinado por la url 2 post lo envia en las cabeceras -->
+      <!-- el atributo auto compleate quita el autocompletado -->
+      <input type="text" name="usuario" id="usuario" placeholder="Escribe tu usuario"  pattern="^[A-Za-z]+$" title="el campo solo acepta letras"><br>
+      <!-- el required es un atributo el cual indica que hasa que un campo de formulario no sea completado no se podra generar el envio-->
+      <!-- el atributo pattern restringe los caracteres que se pueden poner dentro de un formulario -->
+      <label for="password">password :</label>
+      <input type="password" name="password" id="password" placeholder="escribe tu contraseña" required ><br>
+      <input type="submit"><br>
+      <input type="reset"> <br>
+      <input type="email" name="email">
+    </form>
+    <hr>
   <script>
     console.log ("hola estamos aperendiendo html");
   </script>
