ultimo comit agregando lo que faltaba de anclas internas

--- a/index.html
+++ b/index.html
@@ -42,17 +42,22 @@ como español o ingles -->
     <li><a href="index.html#etiquetas_semanticas_estructurales">etiquetas semanticas estructurales</a></li>
     <li><a href="index.html#etiqueta_bloque_linea">etiquetas de bloque vs linea</a></li>
     <li><a href="index.html#estilos">estilos css</a></li>
-    <li><a href="index.html#scrips">script en html</a></script>
-    </li>
+    <li><a href="index.html#scrips">script en html</a></li>
     <li><a href="index.html#imagenes">imagenes</a></li>
     <li><a href="index.html#svg">svg</a></li>
     <li><a href="index.html#figuras">figuras</a></li>
     <li><a href="index.html#listas_ordenadas">listas ordenadas</a></li>
-    <li><a href="index.html#listas_desordenadas">listas desordenadas</a></li>
+    <li><a href="index.html#listas-desordenadas">listas desordenadas</a></li>
     <li><a href="index.html#listas_definicion">listas de definicion</a></li>
     <li><a href="index.html#tablas">tablas</a></li>
     <li><a href="index.html#enlaces">enlaces</a></li>
-    <li><a href="index.html#elementosinteractivos">elementos interactivos</a></li>
+    <li><a href="index.html#elementos-multimedia">Elementos Multimedia</a></li>
+    <li><a href="index.html#iframes">Iframes</a></li>
+    <li><a href="index.html#formularios">Elemenntos de Formulario</a></li>
+    <li><a href="index.html#atributos-de-formularios">Atributos de inpts y formularios</a></li>
+    <li><a href="index.html#data-atributes">Data attributes</a></li>
+    <li><a href="index.html#meta-ceo">Meta etiquetas para ceo</a></li>
+    <li><a href="index.html#Accesibilidad">Accesibilidad Web</a></li>
   </ul>
   <hr>
   <h2 id="encabezados">Encabeazado html </h2>
@@ -220,7 +225,7 @@ como español o ingles -->
       </ol>
       <a href="index.html#inicio">🔼</a>
       <hr>
-      <h2 id="listas desordenadas"> listas desordenadas</h2id>
+      <h2 id="listas-desordenadas"> listas desordenadas</h2id>
         <h3>cosas por hacer</h3>
         <ul>
           <li>arreglarme </li>
@@ -328,7 +333,7 @@ como español o ingles -->
         <br>
         <a href="https://api.whatsapp.com/send?phone=573168256554&text=hola" target="_blank">enalace hacia wattsap</a>
         <hr>
-        <h2 id="elementosinteractivos">Elementos interactivo</h2>
+        <h2 id="elementos-interactivos">Elementos interactivo</h2>
         <!-- son malas practicas sin envargo aqui estan -->
         <button onclick="alert('hola has cliqueado un boton') ">estos es un boton</button><br>
         <details>
@@ -351,11 +356,11 @@ como español o ingles -->
           esto es una ventana modal en HTML
         </dialog>
         <hr>
-        <h2 id="elementosMultimedia">Elementos Multimedia</h2>
+        <h2 id="elementos-multimedia">Elementos Multimedia</h2>
         <audio src="" controls preload="auto"></audio> <br>
         <!-- otros  atributios como autoplay, loop, mute, preload-->
         <video src="media/mylivewallpapers-com-Lofi-Night-Rain-4K.mp4" controls preload="auto"
-          poster="img/Cat03.jpg"></video>
+          poster="img/Cat03.jpg"></video> <br>
         <a href="index.html#inicio">🔼</a>
         <hr>
         <h2 id="iframes">iframes</h2>
@@ -393,7 +398,7 @@ como español o ingles -->
         <hr>
         <a href="index.html#inicio">🔼</a>
 
-        <h2 id="atributosdeformularios">Atributos de inpts y formularios</h2>
+        <h2 id="atributos-de-formularios">Atributos de inpts y formularios</h2>
         <input type="text" readonly value="Daniel Torres" disabled>
         <input type="text" placeholder="Escribe tu nombre">
         <h3>Ejemplo de formulario</h3>
@@ -487,7 +492,7 @@ como español o ingles -->
           <br>
           <a href="index.html#inicio">🔼</a>
           <hr>
-          <h2 id="metas-ceo">Mets etiquetas para ceo</h2>
+          <h2 id="meta-ceo">Meta etiquetas para ceo</h2>
           <br>
           <a href="index.html#inicio">🔼</a>
           <hr>
